force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>loose relationship</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>employee&apos;s</relationshipLabel>
    <relationshipName>employee_s</relationshipName>
    <type>Lookup</type>
</CustomField>