force-app/main/default/objects/Employee__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>It department</fullName>
            </value>
            <value>
                <fullName>sales department</fullName>
            </value>
            <value>
                <fullName>CRM department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>