force-app/main/default/objects/Employee__c/fields/expence__c.field-meta.xml
<CustomField>
    <fullName>expence__c</fullName>
    <label>expense claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>