force-app/main/default/objects/Employee__c/fields/Experience_Years_Number__c.field-meta.xml
<CustomField>
    <fullName>Experience_Years_Number__c</fullName>
    <label>Experience (Years)	Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>