force-app/main/default/objects/Employee__c/fields/manager_approval__c.field-meta.xml
<CustomField>
    <fullName>manager_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>manager approval</label>
    <type>Checkbox</type>
</CustomField>