force-app/main/default/objects/Employee__c/fields/onboarding__c.field-meta.xml
<CustomField>
    <fullName>onboarding__c</fullName>
    <label>onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>today</fullName>
            </value>
            <value>
                <fullName>selected</fullName>
            </value>
            <value>
                <fullName>waiting list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>