force-app/main/default/objects/Employee__c/recordTypes/CSE.recordType-meta.xml
<RecordType>
    <fullName>CSE</fullName>
    <active>true</active>
    <label>CSE</label>
</RecordType>