force-app/main/default/objects/Employee__c/recordTypes/It.recordType-meta.xml
<RecordType>
    <fullName>It</fullName>
    <active>true</active>
    <label>It</label>
</RecordType>