force-app/main/default/objects/Employee__c/validationRules/correct_contact_number.validationRule-meta.xml
<ValidationRule>
    <fullName>correct_contact_number</fullName>
    <active>true</active>
    <description>contact number validation</description>
    <errorConditionFormula>LEN( Phone__c ) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>give correct contact nuber</errorMessage>
</ValidationRule>