force-app/main/default/objects/Employee__c/validationRules/validate_claim.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_claim</fullName>
    <active>true</active>
    <errorConditionFormula>AND( expence__c &gt;50000,  NOT( manager_approval__c) )</errorConditionFormula>
    <errorMessage>Manager approval is required for expense claims above ₹50,000</errorMessage>
</ValidationRule>