force-app/main/default/objects/Employee__c/listViews/users_Employee.listView-meta.xml
<ListView>
    <fullName>users_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>users</label>
    <queue>users</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>